Fixed Chatbar width and search field corner overlap

--- a/app/assets/stylesheets/api/search.css
+++ b/app/assets/stylesheets/api/search.css
@@ -1,3 +1,5 @@
+
+
 .searchContainer {
 	display: flex;
 	flex-direction: column;
@@ -42,6 +44,7 @@
 	padding: 18px;
 	text-align: left;
 	font-size: 16px;
+	border-radius: 3px;
 	/* background-color: antiquewhite; */
 }
 
